{"word":"dune","results":[{"partOfSpeech":"noun","pronunciation":"djuːn","definition":"a mound or ridge of sand or other loose sediment formed by the wind, especially on the sea coast or in a desert.","examples":["a sand dune"],"synonyms":["bank","mound","hillock","hummock","rise","knoll","ridge","heap","drift","accumulation"],"word":"dune"}],"pronunciation":{"a,1":"djuːn"}}